Simplify default Xmx with cgroups
Now that Java 8 has built in support[1] for calculating heap size when
under cgroup memory limits and auto-calculation of thread pool sizes
when under cgroup cpu limits, we can just enable that instead of trying
to calculate Xmx on our own.

Implements ENG-249: https://farmlogs.atlassian.net/browse/ENG-249

[1]: https://dzone.com/articles/running-a-jvm-in-a-container-without-getting-kille